feat: add critical alarm translation