@@ -26,25 +26,29 @@ public class TestSolectriaErrorOracle implements ISolectriaConstants {
 		// 256.000       (256)
 		// 2048          (2048)
 		// 2304          (2048, 256)
-		validateErrors(SolectriaErrorOracle.translateError("NULL", false), Collections.emptyList());
-		validateErrors(SolectriaErrorOracle.translateError("0", false), Collections.emptyList());
-		validateErrors(SolectriaErrorOracle.translateError("2048.000", false), List.of(Fan_Life_Reached));
-		validateErrors(
-				SolectriaErrorOracle.translateError("2304.000", false),
-				Arrays.asList(Fan_Life_Reached, Power_Conversion_Current_Limit));
-		validateErrors(SolectriaErrorOracle.translateError("256.000", false), List.of(Power_Conversion_Current_Limit));
-		validateErrors(
-				SolectriaErrorOracle.translateError("1088.000", false),
-				Arrays.asList(Waiting_for_More_DC_Power, Low_DC_Power_Condition));
-		validateErrors(
-				SolectriaErrorOracle.translateError("1088", false),
-				Arrays.asList(Waiting_for_More_DC_Power, Low_DC_Power_Condition));
+		validateErrors("NULL", Collections.emptyList(), false);
+		validateErrors("0", Collections.emptyList(), false);
+		validateErrors("2048.000", List.of(Fan_Life_Reached), false);
+		validateErrors("2304.000", Arrays.asList(Fan_Life_Reached, Power_Conversion_Current_Limit), false);
+		validateErrors("256.000", List.of(Power_Conversion_Current_Limit), false);
+		validateErrors("1088.000", Arrays.asList(Waiting_for_More_DC_Power, Low_DC_Power_Condition), false);
+		validateErrors("1088", Arrays.asList(Waiting_for_More_DC_Power, Low_DC_Power_Condition), false);
+
+		validateErrors("NULL", Collections.emptyList(), true);
+		validateErrors("0", Collections.emptyList(), true);
+		validateErrors("1024.000", List.of(MAG_Failure), true);
+		validateErrors("1280.000", Arrays.asList(MAG_Failure, VAC_Sense_Circuit_Failure), true);
+		validateErrors("256.000", List.of(Power_Conversion_Current_Limit), true);
+		validateErrors("1088.000", Arrays.asList(Waiting_for_More_DC_Power, Low_DC_Power_Condition), true);
+		validateErrors("1088", Arrays.asList(Waiting_for_More_DC_Power, Low_DC_Power_Condition), true);
 	}
 
-	private void validateErrors(String errorString, Collection<Integer> errors) {
+	private void validateErrors(String rawError, Collection<Integer> errors, boolean criticalError) {
+		String errorString = SolectriaErrorOracle.translateError(rawError, criticalError);
 		if (!errors.isEmpty()) {
 			assertEquals(errors.size(), errorString.split("\n").length);
 		}
-		errors.forEach(code -> assertTrue(errorString.contains(INFORMATIVE_ERROR_CODES.get(code))));
+		errors.forEach(code -> assertTrue(
+				errorString.contains((criticalError ? CRITICAL_ERROR_CODES : INFORMATIVE_ERROR_CODES).get(code))));
 	}
 }
